--- a/screamingfrogseospider/PKGBUILD
+++ b/screamingfrogseospider/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=8.2
 pkgrel=1
 pkgdesc="A small desktop program you can install on your PC or Mac which spiders websites’ links, images, CSS, script and apps from an SEO perspective."
 arch=('any')
-url="http://www.screamingfrog.co.uk/seo-spider/"
+url="https://www.screamingfrog.co.uk/seo-spider/"
 license=('custom')
 depends=('jre8-openjdk' 'java-openjfx')
 makedepends=()
