--- a/wp-boilerplate/PKGBUILD
+++ b/wp-boilerplate/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Matt Harrison <matt@mistbyte.com>
+# Maintainer: Matt Harrison <matt@harrison.us.com>
 # This PKGBUILD is maintained at https://github.com/matt-h/aur-pkgbuilds/tree/master/wp-boilerplate
 
 pkgname=wp-boilerplate
