--- a/obsidian-icon-theme/PKGBUILD
+++ b/obsidian-icon-theme/PKGBUILD
@@ -3,17 +3,18 @@
 
 
 pkgname=obsidian-icon-theme
-pkgver=3.4
+pkgver=3.5
 pkgrel=1
 pkgdesc="Obsidian Icon Theme"
 arch=('any')
 url="https://www.gnome-look.org/p/1169579"
 license=('GPL')
+options=(!strip)
 source=(
 	"https://github.com/madmaxms/iconpack-obsidian/archive/v$pkgver.tar.gz"
 )
 sha256sums=(
-	'574726207fc0c72e09aa7c679305968b66492c2248b111ed5c722111ddd972d8'
+	'1471fbeca6e58a8d4bba9cef54bbb40227dbde24007fce9bc3c394387a8fcd08'
 )
 
 package() {
