--- a/obsidian-2-theme/PKGBUILD
+++ b/obsidian-2-theme/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: scan
 
 pkgname=obsidian-2-theme
-pkgver=2.4
+pkgver=2.5
 pkgrel=1
 pkgdesc="Obsidian 2 Theme GNOME 3.22+"
 arch=('any')
@@ -10,10 +10,10 @@ url="https://www.gnome-look.org/p/1173113/"
 license=('GPL')
 optdepends=('gnome-tweak-tool: A tool to customize advanced GNOME 3 options.')
 source=(
-	"${pkgname}-${pkgver}.zip::https://github.com/madmaxms/theme-obsidian-2/releases/download/v${pkgver}/obsidian-2-theme.zip"
+	"${pkgname}-${pkgver}.tar.xz::https://github.com/madmaxms/theme-obsidian-2/releases/download/v${pkgver}/obsidian-2-theme.tar.xz"
 )
 sha256sums=(
-	'cdb4302159c1166b6976c240da3711fd704c0c55708e9ea5a0b4b3f553b5704b'
+	'b4d2e53d7dae3cd4e55f6d6b00f029f30052b15eeb23bcef13c88659f63dc829'
 )
 
 package() {
