--- a/php-codesniffer-wordpress/PKGBUILD
+++ b/php-codesniffer-wordpress/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=php-codesniffer-wordpress
 _pkgname=WordPress-Coding-Standards
-pkgver=0.14.1
+pkgver=1.0.0
 pkgrel=1
 pkgdesc="PHP_CodeSniffer rules (sniffs) to enforce WordPress coding conventions "
 arch=('any')
@@ -10,8 +10,8 @@ url="https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards"
 license=('MIT')
 depends=('php-codesniffer')
 makedepends=()
-source=("https://github.com/$_pkgname/$_pkgname/archive/$pkgver.tar.gz")
-sha256sums=('6058eb85a3a55fd2ecbc47c0f6870c96d3137c8fa84a858eb8798835cf529597')
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/$_pkgname/$_pkgname/archive/$pkgver.tar.gz")
+sha256sums=('dd895e8fc78c4a08bc320e84ed1443bf6ba9a825204ba17a78a4ceff0d3db8f1')
 
 package() {
   install -d "${pkgdir}/usr/share/pear/PHP/CodeSniffer/Standards/WordPress"
