--- a/geany-zencoding/PKGBUILD
+++ b/geany-zencoding/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Matt Harrison <matt@harrison.us.com>
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds
 # Contributor: Sagar Chalise <chalisesagar@gmail.com>
-# This PKGBUILD is maintained at https://github.com/matt-h/aur-pkgbuilds/tree/master/geany-zencoding
 
 pkgname=geany-zencoding
 pkgver=0.22
