--- a/ruby-svn2git/PKGBUILD
+++ b/ruby-svn2git/PKGBUILD
@@ -1,5 +1,5 @@
-#$Id$
-# Maintainer: Matt Harrison <matt@harrison.us.com.com>
+# Maintainer: Matt Harrison <matt@harrison.us.com>
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds
 
 _gemname=svn2git
 pkgname=ruby-$_gemname
