--- a/screamingfrogseospider/PKGBUILD
+++ b/screamingfrogseospider/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds
 
 pkgname=screamingfrogseospider
-pkgver=10.1
+pkgver=10.4
 pkgrel=1
 pkgdesc="A small desktop program you can install on your PC or Mac which spiders websites’ links, images, CSS, script and apps from an SEO perspective."
 arch=('any')
@@ -14,8 +14,10 @@ source=(
   "https://download.screamingfrog.co.uk/products/seo-spider/screamingfrogseospider_${pkgver}_all.deb"
   "LICENSE"
 )
-sha256sums=('bb52b003c2db5f836ad8bfdc6f03ded30659ea646eb5e0adf830b07fa580d1cb'
-            '5f32a7baef326d88754c6581883800a8d68a753bec846a1d0c190460ab7a2424')
+sha256sums=(
+  '88cb63c346f00126d1920b2f5c65b4edbcf9ad58f7588d93c132bfd35132061a'
+  '5f32a7baef326d88754c6581883800a8d68a753bec846a1d0c190460ab7a2424'
+)
 
 build() {
   cd "$srcdir"
