--- a/go.rice/PKGBUILD
+++ b/go.rice/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=1.0.0
 pkgrel=1
 pkgdesc='Go package that makes working with resources such as html,js,css,images,templates, etc very easy.'
 arch=(x86_64)
-url='https://statping.com/'
+url='https://github.com/GeertJohan/go.rice'
 license=("BSD")
 makedepends=(go)
 source=("$pkgname-$pkgver.tar.gz::https://github.com/GeertJohan/$pkgname/archive/v$pkgver.tar.gz")
