--- a/screamingfrogseospider/PKGBUILD
+++ b/screamingfrogseospider/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds
 
 pkgname=screamingfrogseospider
-pkgver=12.6
+pkgver=13.0
 pkgrel=1
 pkgdesc="A small desktop program you can install on your PC or Mac which spiders websites’ links, images, CSS, script and apps from an SEO perspective."
 arch=('x86_64' 'i686')
@@ -14,27 +14,18 @@ source=(
   "https://download.screamingfrog.co.uk/products/seo-spider/screamingfrogseospider_${pkgver}_all.deb"
   "LICENSE"
 )
-sha256sums=('e9a3306eb5a51c75dda92b004dea223b7c900f2e34ed39bcf5af4a92ff1249ce'
+sha256sums=('122eee07bb4de104ceb2c9866e5b32b4ff586bf894e6ffe1f1d340777da2ef50'
             '855f01069c19bb605e344fb9e42ca63caeeb2c214c4be04ad4990a749f3cf069')
 
 build() {
   msg "Extracting deb data..."
   tar xf "$srcdir/data.tar.xz" -C "$srcdir"
-  msg2 "Done extracting deb data!"
-  if [ "$CARCH" = "x86_64" ]; then
-    _jre_file="jre64.tar.gz"
-  else
-    _jre_file="jre32.tar.gz"
-  fi
-  msg "Extracting jre..."
-  tar xf "$srcdir/usr/share/screamingfrogseospider/tmp/$_jre_file" -C "$srcdir/usr/share/screamingfrogseospider"
-  msg2 "Done extracting jre!"
-  rm -rf "$srcdir/usr/share/screamingfrogseospider/tmp"
 }
 
 package() {
   cp -dpr --no-preserve=ownership "$srcdir/usr" "$pkgdir"
   install -Dm644 "$srcdir/LICENSE" "$pkgdir/usr/share/licenses/${pkgname}/LICENSE"
+  install -Dm755 "$srcdir/usr/share/${pkgname}/jre/bin/java" "$pkgdir/usr/share/${pkgname}/jre/bin/java"
 }
 
 # vim:set ts=2 sw=2 et:
