upgpkg: php-zstd 0.7.5-1
upstream release

--- a/php-zstd/PKGBUILD
+++ b/php-zstd/PKGBUILD
@@ -4,16 +4,16 @@
 pkgname=php-zstd
 _pkgname=php-ext-zstd
 pkgdesc='Zstd Extension for PHP'
-pkgver='0.7.4'
-pkgrel='2'
+pkgver=0.7.5
+pkgrel=1
 arch=('x86_64')
 url='https://github.com/kjdev/php-ext-zstd'
 license=('MIT')
 depends=('php' 'zstd')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kjdev/$_pkgname/archive/$pkgver.tar.gz"
   'zstd.ini')
-sha256sums=('c5720163e9c4391d6cafaf368fc16a1c67c628e7e82dd21fe8dcdafbb88680de'
-  '2b68270574fcc8234d0e8ed8d7ac6bbecd68b20b9a72c049c3a8e2e309d90304')
+sha256sums=('afa4731ca6a3af14a06198baa8e065ad6cf01646f756b4b429a681d03a8d4901'
+            '2b68270574fcc8234d0e8ed8d7ac6bbecd68b20b9a72c049c3a8e2e309d90304')
 
 prepare() {
   cd "$_pkgname-$pkgver"
@@ -24,6 +24,11 @@ build() {
   cd "$_pkgname-$pkgver"
   ./configure --prefix=/usr --with-libzstd
   make
+}
+
+check() {
+  cd "$_pkgname-$pkgver"
+  make test
 }
 
 package() {
