--- a/coreutils-uutils-compat/PKGBUILD
+++ b/coreutils-uutils-compat/PKGBUILD
@@ -3,21 +3,23 @@
 # Contributor: Allan McRae <allan@archlinux.org>
 # Contributor: judd <jvinet@zeroflux.org>
 
-pkgname=coreutils
+pkgname=coreutils-uutils-compat
+_pkgname=coreutils
 pkgver=8.32
 pkgrel=1
 pkgdesc='The basic file, shell and text manipulation utilities of the GNU operating system'
 arch=('x86_64')
 license=('GPL3')
+conflicts=('coreutils')
 url='https://www.gnu.org/software/coreutils/'
 depends=('glibc' 'acl' 'attr' 'gmp' 'libcap' 'openssl')
-source=("https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.xz"{,.sig})
+source=("https://ftp.gnu.org/gnu/$_pkgname/$_pkgname-$pkgver.tar.xz"{,.sig})
 validpgpkeys=('6C37DC12121A5006BC1DB804DF6FD971306037D9') # Pádraig Brady
 sha256sums=('4458d8de7849df44ccab15e16b1548b285224dbba5f08fac070c1c0e0bcc4cfa'
             'SKIP')
 
 prepare() {
-  cd $pkgname-$pkgver
+  cd $_pkgname-$pkgver
   # apply patch from the source array (should be a pacman feature)
   local filename
   for filename in "${source[@]}"; do
@@ -30,7 +32,7 @@ prepare() {
 }
 
 build() {
-  cd $pkgname-$pkgver
+  cd $_pkgname-$pkgver
   ./configure \
       --prefix=/usr \
       --libexecdir=/usr/lib \
@@ -40,12 +42,12 @@ build() {
 }
 
 check() {
-  cd $pkgname-$pkgver
+  cd $_pkgname-$pkgver
   make check
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $_pkgname-$pkgver
   make DESTDIR="$pkgdir" install
 }
 
