upgpkg: obsidian-2-theme 2.19-1
upstream release

--- a/obsidian-2-theme/PKGBUILD
+++ b/obsidian-2-theme/PKGBUILD
@@ -3,9 +3,9 @@
 # Contributor: scan
 
 pkgname=obsidian-2-theme
-pkgver=2.18
+pkgver=2.19
 pkgrel=1
-pkgdesc="Obsidian 2 Theme GNOME 3.22+"
+pkgdesc="Obsidian 2 Theme - Gnome theme, based upon Adwaita-Maia dark skin"
 arch=('any')
 url="https://github.com/madmaxms/theme-obsidian-2/"
 license=('GPL')
@@ -13,7 +13,7 @@ optdepends=('gnome-tweak-tool: A tool to customize advanced GNOME 3 options.')
 source=(
 	"${pkgname}-${pkgver}.tar.xz::https://github.com/madmaxms/theme-obsidian-2/releases/download/v${pkgver}/obsidian-2-theme.tar.xz"
 )
-sha256sums=('597c285ac2847f8baebf022f74d89263d4b7c81f437b38c6383012cd27cd6ff0')
+sha256sums=('1869eb8b1f2eb49df8a6cceea3170c63962bd2cb702f5ed8f35d852224593949')
 
 package() {
 	install -d ${pkgdir}/usr/share/themes
