--- a/geany-themes/PKGBUILD
+++ b/geany-themes/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Matt Harrison <matt@harrison.us.com>
-# Maintained at: https://github.com/matt-h/aur-pkgbuilds
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 # Contributor: Jesús Jerez <jerezmoreno@gmail.com>
 # collaborator: Alessio Sergi <asergi@archlinux.us>
 # Contributor: Sagar Chalise <chalisesagar@gmail.com>
