--- a/robotstxt/PKGBUILD
+++ b/robotstxt/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Matt Harrison <matt@harrison.us.com>
-# Maintained at: https://github.com/matt-h/aur-pkgbuilds
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=robotstxt
 # No released version yet, so versioned based on the number of commits.
