--- a/urlgrabber/PKGBUILD
+++ b/urlgrabber/PKGBUILD
@@ -1,5 +1,5 @@
 # Maintainer: Matt Harrison <matt@harrison.us.com>
-# Maintained at: https://github.com/matt-h/aur-pkgbuilds
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 # Contributor: Chris Brannon <cmbrannon79@gmail.com>
 # Contributor: Pat Rondon <pmr@@patrondon.org>
 
