--- a/wasabi/PKGBUILD
+++ b/wasabi/PKGBUILD
@@ -2,16 +2,16 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=wasabi
-pkgver=0.1.1
+pkgver=0.1.2
 pkgrel=1
 pkgdesc="A modern and fast real-time MIDI player written in Rust."
 url="https://github.com/arduano/wasabi"
 arch=('x86_64' 'armv7h' 'aarch64')
 license=('custom')
-depends=('at-spi2-core' 'alsa-lib' 'gcc-libs' 'gtk3')
+depends=('alsa-lib' 'gcc-libs')
 makedepends=('cargo-nightly' 'cmake' 'git' 'shaderc')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/arduano/wasabi/archive/refs/tags/v${pkgver}.tar.gz")
-b2sums=('2ec238a2b2196c968e2327817d80d91289efc418839623c6e2d9295fa2f12495f06b6ed35006ed40035f8d438a0a17b1d9b0b6ea56c41979cac4c7fa22f6e6cf')
+b2sums=('c4deb3761e4e384872025b34fba02d2e343a70dd825b488f69dd67dcf7a7ede08436de0af866e626c55d8910a61626f0f490bc495f3ffd67089db677eebadbad')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
