--- a/screamingfrogseospider/PKGBUILD
+++ b/screamingfrogseospider/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=screamingfrogseospider
-pkgver=19.3
+pkgver=19.4
 pkgrel=1
 pkgdesc="A small desktop program you can install on your PC or Mac which spiders websites’ links, images, CSS, script and apps from an SEO perspective."
 arch=('x86_64' 'i686')
@@ -15,9 +15,12 @@ source=(
   "LICENSE"
   "screamingfrogseospider"
 )
-sha256sums=('fe2400d2c16c69577bb094b17cef67c8d81c8f1dfa80ff917ff5352d44b4c46c'
+sha256sums=('b80d838a2bfecd7d447c3ae98e45721c555b06431b2f14965ad3917bf7575438'
             '855f01069c19bb605e344fb9e42ca63caeeb2c214c4be04ad4990a749f3cf069'
             '60ad046fb03f769cf453f23a8bfdbd40d7280b2f133c02756328f75a485fa127')
+b2sums=('13cf74f2fb15f1640492a12575c211643e3552f302f53c977a4aa0d3f3c8176f950d33c3a89a6e85afa8fd6e97776277b7ec81f6933fe8748809bcaf40db83f7'
+        '6cde786ef5e5bf0e2d1cb9403eb9bbe6923731e22263e1cd2b3c3f0258d6efb4151eba5b59ee9e87894d17af75f1f72509bd389d1425a9fcab37ba51d9b50cd7'
+        '1c22167625276543fc356023f1ced343c8efb1ee8267587e6ba2a8a1c6fe6d3f7e0d4c40a048cb51c7131733d49ed4eb7eaececcfb54f1a124ca01bef8549ca4')
 
 build() {
   msg "Extracting deb data..."
