upgpkg: php-zstd 0.13.2-1
upstream release

--- a/php-zstd/PKGBUILD
+++ b/php-zstd/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=php-zstd
 _pkgname=php-ext-zstd
 pkgdesc='Zstd Extension for PHP'
-pkgver=0.13.1
+pkgver=0.13.2
 pkgrel=1
 arch=('x86_64')
 url='https://github.com/kjdev/php-ext-zstd'
@@ -12,8 +12,8 @@ license=('MIT')
 depends=('php' 'zstd')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/kjdev/$_pkgname/archive/$pkgver.tar.gz"
   'zstd.ini')
-sha256sums=('459f42c370334dc75e1cb2211d7eb49069a4ad171cd226501330a6c7bfe0a8fd'
-            '2b68270574fcc8234d0e8ed8d7ac6bbecd68b20b9a72c049c3a8e2e309d90304')
+b2sums=('e502dd32c9acc00bdf91fd0d38d027ac4bdd2ac8b0dea167bc863a0858c4bc8fd8af28c3678bcfa2fb9d9127d05f7796b48c8c8607869c7b64f31f2efbd1b3c7'
+        '00a1b0d80b05764c518768dd21370625887a85a5ce989ab708746fee731ab8e9b00f725531015abd99f953073b70efbfed9ae864054799c49810b126c0f4306e')
 
 prepare() {
   cd "$_pkgname-$pkgver"
