--- a/php-codesniffer-phpcsutils/PKGBUILD
+++ b/php-codesniffer-phpcsutils/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=php-codesniffer-phpcsutils
 _pkgname=PHPCSUtils
-pkgver=1.0.9
+pkgver=1.0.10
 pkgrel=1
 pkgdesc="A set of utilities to aid developers of sniffs for PHP_CodeSniffer"
 arch=('any')
@@ -12,7 +12,7 @@ license=('LGPL')
 depends=('php-codesniffer')
 makedepends=()
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz")
-sha256sums=('d6bda687d28e4fb58ab9192ee085b8e22af9ed500fa8e5c30448db5ae210dbc8')
+b2sums=('69ec0bfad30eb217c4954a09d368e6eeceec0b431fde6c84cb29038bbeb93816cc868203d2c63e1ba2181f866effcbc3e802e8b92c5b522bd3f2d28d8d76db9d')
 
 package() {
   install -d "${pkgdir}/usr/share/pear/PHP/CodeSniffer/Standards/PHPCSUtils"
