upgpkg: php-codesniffer-wordpress 3.1.0-1
upstream release

--- a/php-codesniffer-wordpress/PKGBUILD
+++ b/php-codesniffer-wordpress/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=php-codesniffer-wordpress
 _pkgname=WordPress-Coding-Standards
-pkgver=3.0.0
+pkgver=3.1.0
 pkgrel=1
 pkgdesc="PHP_CodeSniffer rules (sniffs) to enforce WordPress coding conventions "
 arch=('any')
@@ -12,7 +12,7 @@ license=('MIT')
 depends=('php-codesniffer' 'php-codesniffer-phpcsextra' 'php-codesniffer-phpcsutils')
 makedepends=()
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/WordPress/$_pkgname/archive/$pkgver.tar.gz")
-sha256sums=('3e32d8b9eec1a639638a0d9b0de00942d2c448577a7e618601102c622126777d')
+b2sums=('d450db2c912b483fc96238ed7d8679b5cc0cd26d4d61dbd1469eb14251b4e98235235351cd1e348e149ad3649b40cd0187a745a338f6c7fa6b93639d717944eb')
 
 package() {
   install -d "${pkgdir}/usr/share/pear/PHP/CodeSniffer/Standards/WordPress"
