upgpkg: php-codesniffer 3.9.1-1
upstream release

--- a/php-codesniffer/PKGBUILD
+++ b/php-codesniffer/PKGBUILD
@@ -3,29 +3,27 @@
 
 pkgname=php-codesniffer
 _pkgname=PHP_CodeSniffer
-pkgver=3.7.2
+pkgver=3.9.1
 pkgrel=1
 pkgdesc="PHP_CodeSniffer tokenizes PHP, JavaScript and CSS files to detect and fix violations of a defined set of coding standards."
 arch=('any')
-url="http://pear.php.net/package/PHP_CodeSniffer/"
-license=('BSD')
+url="https://github.com/PHPCSStandards/PHP_CodeSniffer"
+license=('BSD-3-Clause')
 depends=('php')
-source=("phpcs-${pkgver}.phar::https://github.com/squizlabs/${_pkgname}/releases/download/${pkgver}/phpcs.phar"
-        "phpcs-${pkgver}.phar.asc::https://github.com/squizlabs/${_pkgname}/releases/download/${pkgver}/phpcs.phar.asc"
-        "phpcbf-${pkgver}.phar::https://github.com/squizlabs/${_pkgname}/releases/download/${pkgver}/phpcbf.phar"
-        "phpcbf-${pkgver}.phar.asc::https://github.com/squizlabs/${_pkgname}/releases/download/${pkgver}/phpcbf.phar.asc"
-        "licence-${pkgver}.txt::https://raw.githubusercontent.com/squizlabs/${_pkgname}/${pkgver}/licence.txt")
-validpgpkeys=('A972B9ABB95D0B760B51442231C7E470E2138192')
-sha256sums=('204214c1ea5ba814fb0b2608c19cca2c10bf5ffcc9f0e3d4c34aadc0179517b7'
-            'SKIP'
-            '4eca732a997df08a4c97e43266eb8122f916d39bb002a000600fdd5393f4efe1'
-            'SKIP'
-            '577aa0eb3360e7b45fe436138c40d49f952e6d496987406981b6f1eee69b26e9')
+makedepends=('git')
+_tag_commit=267a4405fff1d9c847134db3a3c92f1ab7f77909
+source=("${pkgname}-${pkgver}::git+${url}#commit=$_tag_commit")
+b2sums=('SKIP')
+
+build() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  php -d phar.readonly=0 ./scripts/build-phar.php
+}
 
 package() {
-  install -Dm0755 "${srcdir}/phpcs-${pkgver}.phar" "${pkgdir}/usr/bin/phpcs"
-  install -Dm0755 "${srcdir}/phpcbf-${pkgver}.phar" "${pkgdir}/usr/bin/phpcbf"
+  install -Dm0755 "${srcdir}/${pkgname}-${pkgver}/phpcs.phar" "${pkgdir}/usr/bin/phpcs"
+  install -Dm0755 "${srcdir}/${pkgname}-${pkgver}/phpcbf.phar" "${pkgdir}/usr/bin/phpcbf"
 
   install -d "${pkgdir}/usr/share/licenses"
-  install -D -m 644 "${srcdir}/licence-${pkgver}.txt" "${pkgdir}/usr/share/licenses/${pkgname}/licence.txt"
+  install -D -m 644 "${srcdir}/${pkgname}-${pkgver}/licence.txt" "${pkgdir}/usr/share/licenses/${pkgname}/licence.txt"
 }
