upgpkg: php-codesniffer-phpcompatibilitywp 2.1.5-1
upstream release

--- a/php-codesniffer-phpcompatibilitywp/PKGBUILD
+++ b/php-codesniffer-phpcompatibilitywp/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=php-codesniffer-phpcompatibilitywp
 _pkgname=PHPCompatibilityWP
-pkgver=2.1.4
+pkgver=2.1.5
 pkgrel=1
 pkgdesc="PHP CodeSniffer rules (sniffs) to analyse the codebase of a WordPress-based project for PHP cross-version compatibility."
 arch=('any')
@@ -12,7 +12,7 @@ license=('LGPL')
 depends=('php-codesniffer' 'php-codesniffer-phpcompatibility' 'php-codesniffer-phpcompatibilityparagonie')
 makedepends=()
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz")
-sha256sums=('4c18af6b60766983e7c917c058091e1718f45df838696d41130635ecb0efa026')
+b2sums=('364eb950f4413e8ae1034612492fee1dd7221d4c98e92a664d3973c546bd9fad9909719eb110e977c481fea43dad8b6aad96ebfeef47acedee7bd8f8e858c4cc')
 
 package() {
   install -d "${pkgdir}/usr/share/pear/PHP/CodeSniffer/Standards/PHPCompatibilityWP"
