--- a/wasabi/PKGBUILD
+++ b/wasabi/PKGBUILD
@@ -2,34 +2,31 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=wasabi
-pkgver=0.1.4
+pkgver=1.0.0
 pkgrel=1
 pkgdesc="A modern and fast real-time MIDI player written in Rust."
-url="https://github.com/arduano/wasabi"
+url="https://github.com/BlackMIDIDevs/wasabi"
 arch=('x86_64' 'armv7h' 'aarch64')
-license=('custom')
-depends=('alsa-lib' 'gcc-libs')
+license=('GPL-3.0-only')
+depends=('alsa-lib' 'gcc-libs' 'openssl')
 makedepends=('cargo-nightly' 'cmake' 'git' 'shaderc')
-source=("${pkgname}-${pkgver}.tar.gz::https://github.com/arduano/wasabi/archive/refs/tags/v${pkgver}.tar.gz")
-b2sums=('0b913c1e5e4a61defadb295a33879b0ce86b5e0742fd111c3a32c5531d9457f10b20d354a62b2f3f954790b8db9fd527ec4dcc98b8c72e7aa262149bceec3264')
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/BlackMIDIDevs/wasabi/archive/refs/tags/v${pkgver}.tar.gz")
+b2sums=('db71b9b68d020b5464f6e9ec8d9cd4238228354ad0439a15373ad0c5667e4b3aa66159fe8ba255efaea0ac9af4e0e63222db8cf3693929be3e41993d79f29b44')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  export RUSTUP_TOOLCHAIN=nightly
   cargo fetch --locked --target "$CARCH-unknown-linux-gnu"
 }
 
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  export RUSTUP_TOOLCHAIN=nightly
   export CARGO_TARGET_DIR=target
   cargo build --frozen --release --all-features
 }
 
 check() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  export RUSTUP_TOOLCHAIN=nightly
   cargo test --frozen --all-features
 }
 
