upgpkg: screamingfrogseospider-jre 20.3-1
upstream release

upgpkg: screamingfrogseospider-jre 20.3-1

upstream release

upgpkg: screamingfrogseospider-jre 20.3-1

upstream release

upgpkg: screamingfrogseospider-jre 20.3-1

make it a standalone that conflicts so you don't need to download build both. Just one or the other

--- a/screamingfrogseospider-jre/PKGBUILD
+++ b/screamingfrogseospider-jre/PKGBUILD
@@ -4,36 +4,33 @@
 pkgname=screamingfrogseospider-jre
 pkgver=20.3
 pkgrel=1
-pkgdesc="bundled jre from screaming frog seo spider package if you have issues with openjdk"
+pkgdesc="spiders websites’ links, images, CSS, script and apps from an SEO perspective. With bundled jre if you have issues with openjdk"
 arch=('x86_64' 'i686')
 url="https://www.screamingfrog.co.uk/seo-spider/"
 license=('custom')
-depends=('screamingfrogseospider')
+provides=('screamingfrogseospider')
+conflicts=('screamingfrogseospider')
+depends=('ttf-font')
 makedepends=('tar')
 source=(
   "screamingfrogseospider_${pkgver}_all.deb::https://download.screamingfrog.co.uk/products/seo-spider/screamingfrogseospider_${pkgver}_all.deb?noredirect"
   "LICENSE"
+  "screamingfrogseospider"
 )
-sha256sums=('8633b99f739b469e420fcbbbc0f5352173bc9f7d102e39992b586fd6dce3ed37'
-            '855f01069c19bb605e344fb9e42ca63caeeb2c214c4be04ad4990a749f3cf069')
 b2sums=('d6160a1f1a7ba9c255a60b97a0ce4a4ad4be801ae00ffd1c4f378dbfbe6e4897e1f81dab6531575cc8ccffaab469dbbc6bb27f0ac28433b3ec9aa90faa58a5ae'
-        '6cde786ef5e5bf0e2d1cb9403eb9bbe6923731e22263e1cd2b3c3f0258d6efb4151eba5b59ee9e87894d17af75f1f72509bd389d1425a9fcab37ba51d9b50cd7')
+        '6cde786ef5e5bf0e2d1cb9403eb9bbe6923731e22263e1cd2b3c3f0258d6efb4151eba5b59ee9e87894d17af75f1f72509bd389d1425a9fcab37ba51d9b50cd7'
+        '7d0afe711366086d889a26237e96696b917552ea9023cbf5b11b4479943d1cd922c8adeafc3d988e5038a828775e810fdcce07ed5cad03c89da511747ed0c3cb')
 
 build() {
   msg "Extracting deb data..."
   tar xf "$srcdir/data.tar.xz" -C "$srcdir"
-  ls -lah "$srcdir"
-  ls -lah "$srcdir/usr/"
-  ls -lah "$srcdir/usr/share/"
-  ls -lah "$srcdir/usr/bin/"
-  rm -f "$srcdir/usr/share/screamingfrogseospider/ScreamingFrogSEOSpider.jar"
-  rm -rf "$srcdir/usr/bin"
+  rm "$srcdir/usr/bin/screamingfrogseospider"
 }
 
 package() {
-  install -d "${pkgdir}/usr/share/screamingfrogseospider"
-  cp -dpr --no-preserve=ownership "$srcdir/usr/share/screamingfrogseospider/jre" "$pkgdir/usr/share/screamingfrogseospider/"
+  cp -dpr --no-preserve=ownership "$srcdir/usr" "$pkgdir"
   install -Dm644 "$srcdir/LICENSE" "$pkgdir/usr/share/licenses/${pkgname}/LICENSE"
+  install -Dm755 "$srcdir/screamingfrogseospider" "$pkgdir/usr/bin/screamingfrogseospider"
 }
 
 # vim:set ts=2 sw=2 et:
