upgpkg: mago 1.0.0.alpha.4-1
upstream release

--- a/mago/PKGBUILD
+++ b/mago/PKGBUILD
@@ -2,25 +2,27 @@
 # Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
 
 pkgname=mago
-pkgver=1.0.0.alpha.2
-_pkgver=1.0.0-alpha.2
+pkgver=1.0.0.alpha.4
+_pkgver=1.0.0-alpha.4
 pkgrel=1
 pkgdesc="A CLI text viewer tool that works interactively like less command on small pane within the terminal window."
 url="https://github.com/carthage-software/mago"
 arch=('x86_64')
 license=('MIT')
 depends=('gcc-libs' 'glibc')
-makedepends=('cargo' 'openssl' 'pkgconf')
+makedepends=('cargo-nightly' 'openssl')
 source=("${pkgname}-${_pkgver}.tar.gz::https://github.com/carthage-software/mago/archive/refs/tags/${_pkgver}.tar.gz")
-b2sums=('8df91c02dc8b24eae9ba6a32820536349f1a05314f269a9b1c4d883ffa8cf8d7a817efef7c09deca7d59fe0b8f99b61fee897b96eba2f2f970682ff6cf00502b')
+b2sums=('606339b80cfa1263783c0755828d12c049221d2c001c8ef064b09a43da04349ad791c490ff71872cdc21fd271c433cf0ada66abe9c05eb02049c8f1dceeebca3')
 
 prepare() {
   cd "${srcdir}/${pkgname}-${_pkgver}"
+  export RUSTUP_TOOLCHAIN=stable
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
   cd "${srcdir}/${pkgname}-${_pkgver}"
+  export CFLAGS="$CFLAGS -ffat-lto-objects"
   export RUSTFLAGS="${RUSTFLAGS} --remap-path-prefix $srcdir=src"
   export RUSTUP_TOOLCHAIN=stable
   export CARGO_TARGET_DIR=target
