upgpkg: uptime-kuma 2.0.2-1
upstream release

Also set it to run as its own user and save data to /var/lib/uptime-kuma

--- a/uptime-kuma/uptime-kuma.service
+++ b/uptime-kuma/uptime-kuma.service
@@ -4,6 +4,7 @@ Documentation=https://github.com/louislam/uptime-kuma
 After=network.target
 
 [Service]
+User=uptime-kuma
 Type=simple
 WorkingDirectory=/usr/lib/node_modules/uptime-kuma/
 ExecStart=/usr/bin/node server/server.js
