upgpkg: uptime-kuma 2.1.0-1
upstream release

--- a/uptime-kuma/PKGBUILD
+++ b/uptime-kuma/PKGBUILD
@@ -1,8 +1,11 @@
-# Maintainer: bgh <aur at bgh dot io>
+# Maintainer: Matt Harrison <matt@harrison.us.com>
+# Contributor: bgh <aur at bgh dot io>
 # Contributor: Sylvain Durand <arch@durand.tf>
 
+# Maintained at: https://github.com/matt-h/aur-pkgbuilds or https://codeberg.org/matt/aur-pkgbuilds
+
 pkgname=uptime-kuma
-pkgver=2.0.2
+pkgver=2.1.0
 pkgrel=1
 pkgdesc='A fancy self-hosted monitoring tool'
 
@@ -22,12 +25,12 @@ source=(
 )
 noextract=("${pkgname}-${pkgver}.tar.gz")
 
-b2sums=('129b312cae14a17423de50f3dd9dba463bf13306ae6b27121145196f302483abf02ee651b09f343a20d7f2c12495d5b1e5ab5e2f00621f9e3ef6d136fac64e12'
-        'c5b68e3f272889c357bc6c9320e89dcee80c9f49ab93afa32f6875384addba59b31cb6b0794b55053e3ab3e451362605047b5641c6f8a449e5161692b1d26178'
+b2sums=('69e64b0b1f075048a11555d2ffb39373d306152f1dafd91a9112b8939da6836f9d1f42a52cf895f3216db8dde037beb1d409b83a2c9885ea77b9ac5962491e99'
+        'fd8d55ce0293ed4dd6e88784f3a38bcc4d943d04f8ad7f86d0ed21c8bdc2b742fe5587e2c63ade019ffc131f793c17a70033d9769ea5f2a8b22be255c56eafea'
         'e47645e66b3df7fa7bd9882a38c438d09385994a8e8e8b4a8530add90da14cd4e0ea0fde6367f394ee460f861078d242b87db4cb2851adffdb727f63d9651684'
         'b335b1456591386937213f608b92fa4bf6e4431452f09583f030f0bb1edecdf5c6ce01b284e1bd3324738d565f38142339679cbbea18d19a0781806831214864'
         '05b89792c16d415e380dd0b3a2cec04e12406646531f0ce9d8c7aeff29cdd56b452ee4411aa07f404d2511bb315cc619567eee328b39c8b78f93ed88ddd9c7d6'
-        'c4ffacf68e8b10f76477f8996af1afcc0ef9ff0f81dd9cf4afbda1754256f7f2105645c68c2eefc1a07a2875af38880c11059cc248631e0d70c88c181de7a729')
+        '808783618bb9f38e42adfa29e98610963bde12e67fc9ff17447650881433e6bd648b35f281ba96e59806676642253fb9e55c3a5bb4d18a19cfd18a3630faeb9b')
 
 package() {
   npm install --global --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tar.gz --cache npm-cache
